Update and rename settings.example.json to settings.json

--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
     "bitRate": 96000,
     "defVolume": 100,
     "ratingCooldown": 86400,
-    "token": "DISCORD_BOT_TOKEN", 
+    "token": "ODA3ODg1Njc2MDE1NjQ4Nzcw.YB-gKg.WV-ZxUcBD9h_ZORsFU3hwMa_ojY", 
     "scClientId": "SOUNDCLOUD_CLIENT_ID",
     "spotifyClientId": "SPOTIFY_CLIENT_ID",
     "spotifyClientSecret": "SPOTIFY_CLIENT_SECRET",
